--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,10 @@
     <groupId>org.example</groupId>
     <artifactId>Universe</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -35,9 +36,9 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.2.0</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
