--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,13 @@
 
         <!-- kubernetes client       -->
         <dependency>
-            <groupId>io.kubernetes</groupId>
-            <artifactId>client-java</artifactId>
-            <version>11.0.0</version>
+            <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-client</artifactId>
+            <version>6.9.2</version>
         </dependency>
+
+
+
     </dependencies>
 
     <build>
