--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://mysqldb:3306/universe
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://192.168.224.1:3306/universe
+spring.datasource.username=universe
+spring.datasource.password=universe
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
