--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <mainClass>universe.UniverseApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
